--- a/css/custom.css
+++ b/css/custom.css
@@ -13,3 +13,7 @@
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.15); 
     border: 0;
     box-shadow: none; }
+
+html.img-right div.slide-background.present {
+      background-position: right;
+  }
